--- a/HomeBase/app/src/main/res/values/colors.xml
+++ b/HomeBase/app/src/main/res/values/colors.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorButtonPrimary">#3F51B5</color>
     <color name="black">#ff000000</color>
     <color name="colorWhite">#FFFFFF</color>
+    <color name="colorPrimary">#F35E32</color>
+    
+    <color name="dash_invisible">@color/colorWhite</color>
+    <color name="dash_visible">@color/colorPrimary</color>
 </resources>
