--- a/HomeBase/app/src/main/res/values/styles.xml
+++ b/HomeBase/app/src/main/res/values/styles.xml
@@ -3,23 +3,20 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">@color/colorButtonPrimary</item>
         //full screen
         <item name="android:windowFullscreen">true</item>
     </style>
 
     <style name="common_button">
-        <item name="android:layout_width">100dp</item>
-        <item name="android:layout_height">45dp</item>
-        <item name="android:layout_marginTop">10dp</item>
+        <item name="android:layout_width">125dp</item>
+        <item name="android:layout_height">40dp</item>
         <item name="android:background">@drawable/round_btn</item>
         <item name="android:paddingLeft">5dp</item>
         <item name="android:paddingRight">5dp</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:textColor">@android:color/white</item>
-        <item name="android:textSize">14sp</item>
+        <item name="android:textSize">15sp</item>
     </style>
 
 </resources>
