--- a/HomeBase/app/src/main/res/layout-land/live_map_view.xml
+++ b/HomeBase/app/src/main/res/layout-land/live_map_view.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:mapbox="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -50,20 +49,20 @@
         android:text="@string/button_force_stop" />
 
     <Button
-        android:id="@+id/btn_start_coordinates"
+        android:id="@+id/btn_send_area"
         style="@style/common_button"
         android:layout_width="100dp"
         android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
         android:layout_toEndOf="@+id/btn_force_Stop"
-        android:text="@string/button_start_coordinates" />
+        android:text="@string/button_send_area" />
 
     <TextView
         android:id="@+id/tv_drone_battery_information"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
-        android:layout_toEndOf="@+id/btn_start_coordinates"
+        android:layout_toEndOf="@+id/btn_send_area"
         android:layout_marginTop="5dp"
         android:text="@string/unknown"
         android:textAlignment="center"
@@ -83,14 +82,14 @@
         android:textSize="17sp" />
 
     <Button
-        android:id="@+id/btn_send_area"
+        android:id="@+id/btn_remove_last"
         style="@style/common_button"
         android:layout_width="100dp"
         android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
         android:layout_below="@+id/btn_start_search"
         android:layout_alignStart="@id/tv_drone_battery_information"
-        android:text="@string/button_send_area" />
+        android:text="@string/button_remove_last" />
 
     <Button
         android:id="@+id/btn_remove_area"
